WIZZIE-1267 Refactor druid-docker and update to 0.12 version